Fixed image overflow on article page

--- a/src/components/app-article/app-article.css
+++ b/src/components/app-article/app-article.css
@@ -20,5 +20,6 @@ h1 {
 img {
   display: block;
   max-width: 900px;
+  width: 100%;
   margin: 0 auto;
 }
